--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "bootstrap": "^3.3.7",
         "bootswatch": "^3.3.7",
-        "datatables.net-dt": "^1.10.16"
+        "datatables.net-dt": "^1.10.16",
+        "font-awesome": "^4.7.0"
     }
 }
